add first section

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 <body>
     <section class="first-sec">
-        <h1>Let's Help Those Who are More In Need </h1>
-        <h3>We try to help the people affected by the flood in our northeastern part of the country</h3>
-        <a class="donate-btn" href="">Donate Now</a>
+        <div class="donate-now">
+            <h1>Let's Help Those Who are </br> More In Need </h1>
+            <h3>We try to help the people affected by the flood in </br>our northeastern part of the country</h3>
+            <a class="donate-btn" href="">Donate Now</a>
+        </div>
     </section>
 </body>
 </html>
