--- a/index.html
+++ b/index.html
@@ -15,9 +15,72 @@
     <section class="first-sec">
         <div class="donate-now">
             <h1>Let's Help Those Who are </br> More In Need </h1>
-            <h3>We try to help the people affected by the flood in </br>our northeastern part of the country</h3>
+            <p>We try to help the people affected by the flood in </br>our northeastern part of the country</p>
             <a class="donate-btn" href="">Donate Now</a>
         </div>
     </section>
+    <section class="second-sec">
+        <div class="donate-today">
+            <div class="donate-today-child">
+                <h1>Donate Today</h1>
+                <h3>You can donate any mentioned amount below or any customized amount, thank you</h3>
+            </div>
+            <div class="dotate-amt">
+                <div class="donate-amt1">
+                    <a href="#">100tk</a>
+                </div>
+                <div class="donate-amt2">
+                    <a href="#">200tk</a>
+                </div>
+                <div class="donate-amt3">
+                    <a href="#">500tk</a>
+                </div>
+                <div class="donate-amt4">
+                    <a href="#">1000tk</a>
+                </div>
+                <div class="donate-amt5">
+                    <a href="#">5000tk</a>
+                </div>
+            </div>
+            <div class="other-amt">
+                <input type="text" placeholder="Other amount">
+                <hr>
+            </div>
+        </div>
+        <a class="donate-btn" href="">Donate Now </a>
+    </section>
+    <Section class="lives">
+        <div class="half-width">
+            <h1>Their lives depend on our donation</h1>
+            <p>They are having very difficulties to survive. We need to help them as soon as possible. They are hungry, sick and hopeless. </p>
+            <a class="donate-btn" href="">How to contribute?</a>
+        </div>
+        <div class="half-width">
+            <img src="images/donation9.jpg" alt="a child walking alone onto the water">
+        </div>
+    </Section>
+    <section class="survive">
+        <div class="half-width">
+            <img src="images/donation4.jpg" alt="a child walking alone onto the water">
+        </div>
+        <div class="half-width">
+            <h1>They need us to survive</h1>
+            <p>They are having very difficulties to survive. We need to help them as soon as possible. They are hungry, sick and hopeless. </p>
+            <a class="donate-btn" href="">How to contribute?</a>
+        </div>
+    </section>
+    <section class="updates">
+        <div class="updates-text">
+            <h1>Get Our Updates</h1>
+            <p>Feel free to contact with us. We are here to help you.</p>
+        </div>
+        <div class="updates-subs">
+            <input class="updates-box" type="text"><button class="updates-btn">Subscribe</button>
+        </div>
+    </section>
+    <footer>
+        <h1>Be Humble</h1>
+        <p>I'm gonna do it, you?</p>
+    </footer>
 </body>
 </html>
