add footer and copyright

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
         <a class="donate-btn" href="">Donate Now </a>
     </section>
+    
     <Section class="lives">
         <div class="half-width">
             <h1>Their lives depend on our donation</h1>
@@ -75,12 +76,14 @@
             <p>Feel free to contact with us. We are here to help you.</p>
         </div>
         <div class="updates-subs">
-            <input class="updates-box" type="text"><button class="updates-btn">Subscribe</button>
+            <input class="updates-box" type="text"> <a href="#"class="updates-btn">Subscribe</a>
+            
         </div>
     </section>
     <footer>
-        <h1>Be Humble</h1>
-        <p>I'm gonna do it, you?</p>
+        <h1><span style="color: tomato;"><i>Be Humble</i></span></h1>
+        <p><small> I'm gonna do it, you?</small></p>
+        <p><small>© Sandwip Mitra 2022, a Programming Hero Creation.</small></p>
     </footer>
 </body>
 </html>
