add final touch

--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
         </div>
         <a class="donate-btn" href="">Donate Now </a>
     </section>
-    
+    <section class="donate-plan">
+        <div class="donate-plan-text">
+            <h1>Our Donate Plan</h1>
+            <p>We have several plan for donation. Check Please</p>
+        </div>
+        <div class="donate-plan-box">
+            <div class="donate-plan-box1">
+                <img src="icons/food.png" alt="icon for food">
+                <h2>Food for family</h2>
+                <p>We are providing food for all victim family.</p>
+            </div>
+            <div class="donate-plan-box2">
+                <img src="icons/shelter.png" alt="icon for shelter">
+                <h2>Shelter for family</h2>
+                <p>We ar providing Shelter for all victim family.</p>
+            </div>
+            <div class="donate-plan-box3">
+                <img src="icons/Frame-1.png" alt="icon for education">
+                <h2>Education for children</h2>
+                <p>Education is essential, that is way we are providing education for children.</p>
+            </div>
+        </div>
+    </section>
     <Section class="lives">
         <div class="half-width">
             <h1>Their lives depend on our donation</h1>
