--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="donate-plan-box3">
                 <img src="icons/Frame-1.png" alt="icon for education">
                 <h2>Education for children</h2>
-                <p>Education is essential, that is way we are providing education for children.</p>
+                <br>Education is essential, that is way we are </br>providing education for children.</p>
             </div>
         </div>
     </section>
